--- a/ch05_update_class.ipynb
+++ b/ch05_update_class.ipynb
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,10 +876,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# result = sample.isin([90, 89])\n",
+    "# print(result)\n",
+    "\n",
+    "print(90 in sample.values, 89 in sample.values)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -890,10 +903,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(90 in sample.values)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -904,10 +927,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('b' in sample.index)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -920,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +972,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1409,10 +1442,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "a     89\n",
+       "b     90\n",
+       "e     90\n",
+       "f    100\n",
+       "j     90\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bool_data = sample >= 80\n",
+    "sample[bool_data]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1423,10 +1475,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "d    65\n",
+       "h    55\n",
+       "i    40\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean = sample.mean()\n",
+    "staver = sample < mean\n",
+    "sample[staver]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1437,10 +1507,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "c    78\n",
+       "d    65\n",
+       "g    78\n",
+       "h    55\n",
+       "i    40\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ins = sample > 60\n",
+    "ins = sample < 80\n",
+    "sample[ins]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1837,10 +1927,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>서울</th>\n",
+       "      <th>대전</th>\n",
+       "      <th>부산</th>\n",
+       "      <th>광주</th>\n",
+       "      <th>원주</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>950</td>\n",
+       "      <td>800</td>\n",
+       "      <td>920</td>\n",
+       "      <td>700</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>945</td>\n",
+       "      <td>790</td>\n",
+       "      <td>910</td>\n",
+       "      <td>690</td>\n",
+       "      <td>290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023</th>\n",
+       "      <td>938</td>\n",
+       "      <td>780</td>\n",
+       "      <td>900</td>\n",
+       "      <td>680</td>\n",
+       "      <td>250</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       서울   대전   부산   광주   원주\n",
+       "2021  950  800  920  700  300\n",
+       "2022  945  790  910  690  290\n",
+       "2023  938  780  900  680  250"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {'서울': [950, 945, 938], \n",
+    "    '대전': [800, 790, 780],\n",
+    "    '부산': [920, 910, 900],\n",
+    "    '광주': [700, 690, 680],\n",
+    "    '원주': [300, 290, 250]\n",
+    "   }\n",
+    "frame2 = pd.DataFrame(data)\n",
+    "frame2.index = ['2021', '2022', '2023']\n",
+    "frame2"
+   ]
   },
   {
    "cell_type": "markdown",
