second programming task-modified

--- a/time_series_class_5_9.ipynb
+++ b/time_series_class_5_9.ipynb
@@ -1743,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "id": "a6115624-9125-4bff-8cba-2b855869e3b1",
    "metadata": {},
    "outputs": [
@@ -1791,7 +1791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "id": "596c4dbd-b697-4338-b2e1-a4683a7b8721",
    "metadata": {},
    "outputs": [
@@ -1919,21 +1919,16 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# CSV 파일 읽기\n",
     "weather = pd.read_csv(\"weather.csv\")\n",
     "\n",
-    "# 연도 추출\n",
     "weather['year'] = pd.DatetimeIndex(weather['일시']).year\n",
     "\n",
-    "# 2015년과 2016년 데이터 필터링\n",
     "weather_2015 = weather[weather['year'] == 2015]\n",
     "weather_2016 = weather[weather['year'] == 2016]\n",
     "\n",
-    "# 2015년과 2016년의 평균 기온 계산\n",
     "avg_temp_2015 = weather_2015['평균 기온'].mean()\n",
     "avg_temp_2016 = weather_2016['평균 기온'].mean()\n",
     "\n",
-    "# 결과 출력\n",
     "if avg_temp_2015 > avg_temp_2016:\n",
     "    print(f\"2015년이 2016년보다 더 더웠습니다. 평균 기온: 2015년({avg_temp_2015:.2f}°C) > 2016년({avg_temp_2016:.2f}°C)\")\n",
     "elif avg_temp_2015 < avg_temp_2016:\n",
@@ -1941,7 +1936,6 @@
     "else:\n",
     "    print(f\"2015년과 2016년의 평균 기온이 동일합니다. 평균 기온: {avg_temp_2015:.2f}°C\")\n",
     "\n",
-    "# 시각화 (선택 사항)\n",
     "years = [2015, 2016]\n",
     "avg_temps = [avg_temp_2015, avg_temp_2016]\n",
     "\n",
@@ -1951,7 +1945,7 @@
     "plt.xlabel('연도')\n",
     "plt.ylabel('평균 기온 (°C)')\n",
     "plt.xticks(years)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -1982,25 +1976,19 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# CSV 파일 읽기\n",
     "weather = pd.read_csv(\"weather.csv\")\n",
     "\n",
-    "# '일시' 열을 datetime 형식으로 변환\n",
     "weather['일시'] = pd.to_datetime(weather['일시'])\n",
     "\n",
-    "# 월 추출\n",
     "weather['month'] = weather['일시'].dt.month\n",
     "\n",
-    "# 월별 평균 기온의 합 계산\n",
     "monthly_sum_temp = weather.groupby('month')['평균 기온'].sum().reset_index()\n",
     "\n",
-    "# 합이 가장 적은 달과 가장 많은 달 찾기\n",
     "min_temp_month = monthly_sum_temp.loc[monthly_sum_temp['평균 기온'].idxmin()]\n",
     "max_temp_month = monthly_sum_temp.loc[monthly_sum_temp['평균 기온'].idxmax()]\n",
     "\n",
-    "# 결과 출력\n",
     "print(f\"평균 기온의 합이 가장 적은 달: {min_temp_month['month']}월, 합: {min_temp_month['평균 기온']:.2f}°C\")\n",
-    "print(f\"평균 기온의 합이 가장 많은 달: {max_temp_month['month']}월, 합: {max_temp_month['평균 기온']:.2f}°C\")\n"
+    "print(f\"평균 기온의 합이 가장 많은 달: {max_temp_month['month']}월, 합: {max_temp_month['평균 기온']:.2f}°C\")"
    ]
   },
   {
@@ -2033,22 +2021,16 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# CSV 파일 읽기\n",
     "weather = pd.read_csv(\"weather.csv\")\n",
     "\n",
-    "# '일시' 열을 datetime 형식으로 변환\n",
     "weather['일시'] = pd.to_datetime(weather['일시'])\n",
     "\n",
-    "# 연도 추출\n",
     "weather['year'] = weather['일시'].dt.year\n",
     "\n",
-    "# 연도별 최대 풍속의 평균 계산\n",
     "yearly_avg_max_wind_speed = weather.groupby('year')['최대 풍속'].mean().reset_index()\n",
     "\n",
-    "# 평균이 가장 큰 연도 찾기\n",
     "max_avg_wind_speed_year = yearly_avg_max_wind_speed.loc[yearly_avg_max_wind_speed['최대 풍속'].idxmax()]\n",
     "\n",
-    "# 결과 출력\n",
     "print(f\"연도별 최대 풍속의 평균이 가장 큰 연도: {max_avg_wind_speed_year['year']}년, 평균 최대 풍속: {max_avg_wind_speed_year['최대 풍속']:.2f} m/s\")\n"
    ]
   }
